@@ -2,6 +2,8 @@ boost1.71 (1.71.0-5) UNRELEASED; urgency=medium
 
   * Cherrypick further patches to document and optimize context on
     s390x. LP: #1859941
+  * Simplify debian/rules slightly, by dropping resetting the default
+    values.
 
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 29 Jan 2020 23:16:31 +0000
 
